--- a/index.html
+++ b/index.html
@@ -47,7 +47,8 @@
         <div class="bg-white p-6 shadow rounded-lg">
           <img src="/assets/images/shop1.jpg" alt="Organic Balm" class="mb-4 rounded">
           <h4 class="text-lg font-semibold mb-2">Organic Baby Balm</h4>
-          <a href="https://organicellie.shop" class="text-green-600 hover:underline">Shop Now</a>
+          <a href="https://earthmamaorganics.com/" class="text-green-600 hover:underline">Shop Now</a>
+          
         </div>
         <div class="bg-white p-6 shadow rounded-lg">
           <img src="/assets/images/shop2.jpg" alt="Non-Toxic Bottle" class="mb-4 rounded">
