--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Organic Ellie</title>
   <script src="https://cdn.tailwindcss.com"></script>
-  <link rel="icon" href="/assets/images/favicon.png">
+<link rel="icon" type="image/png" href="/assets/images/favicon.png">
 </head>
 <body class="font-sans text-gray-800">
   <!-- Navigation -->
