--- a/our-story.html
+++ b/our-story.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Our Story – Organic Ellie</title>
-  <script src="https://cdn.tailwindcss.com"></script
+  <script src="https://cdn.tailwindcss.com"></script>
   <link rel="icon" type="image/png" href="/assets/images/favicon.png">
 </head>
 <body class="bg-green-50 text-gray-800 font-sans">
