--- a/index.html
+++ b/index.html
@@ -5,14 +5,16 @@ layout: default
 <section class="text-center mb-12">
   <h2 class="text-4xl font-extrabold text-green-800 mb-4">Clean, Conscious Living for Modern Mamas</h2>
   <p class="text-lg text-green-900">Organic Ellie is a journey into non-toxic motherhood, clean baby products, and conscious lifestyle choices.</p>
-  <a href="/our-story.html" class="mt-6 inline-block bg-green-600 text-white py-3 px-6 rounded-lg shadow hover:bg-green-700">Read Our Story</a>
+  <a href="/our-story/" class="mt-6 inline-block bg-green-600 text-white py-3 px-6 rounded-lg shadow hover:bg-green-700">Read Our Story</a>
 </section>
 
 <h3 class="text-2xl font-bold text-green-800 mb-6">From the Blog</h3>
 <ul class="space-y-6">
   {% for post in site.posts limit:2 %}
     <li>
-      <h4 class="text-xl font-semibold"><a href="{{ post.url }}" class="text-green-700 hover:underline">{{ post.title }}</a></h4>
+      <h4 class="text-xl font-semibold">
+        <a href="{{ post.url }}" class="text-green-700 hover:underline">{{ post.title }}</a>
+      </h4>
       <p class="text-gray-700">{{ post.description }}</p>
     </li>
   {% endfor %}
